
// krill Openapi protobuf annotations.
//
// In order to avoid conflicts with custom extend fields, every proto file must
// have its own unique initial field value.
//
// All extensions of this file must start with: 56041

syntax = "proto2";

package krill.service;
option go_package = "github.com/rsfreitas/protoc-gen-krill-extensions/options/krill;krill";

import "google/protobuf/descriptor.proto";

// Global file annotations.
extend google.protobuf.FileOptions {
  // Sets the microservice name inside the krill framework environment.
  optional string app_name = 56041;
}

// Annotations to be used at a message member (field) declaration.
extend google.protobuf.FieldOptions {
  optional Database database = 56041;
}

message Database {
  optional string name = 1;
}

